@@ -13,6 +13,7 @@ import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
 import java.lang.reflect.Field;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Map;
@@ -132,11 +133,7 @@ System.err.println("ignoreable: " + field.getName());
                 String name = Parameter.Util.getParameterName(field, bean, parameter);
                 String value = Parameter.Util.getParameterValue(field, bean, parameter);
 //System.err.println("value: " + name + ", " + value);
-                try {
-                    value = URLEncoder.encode(value, "UTF-8");
-                } catch (UnsupportedEncodingException e) {
-                    assert false;
-                }
+                value = URLEncoder.encode(value, StandardCharsets.UTF_8);
                 parameters.put(name, value);
 System.err.println("use: " + name + ", " + value);
             }
